footer height issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ h1 {
 }
 
 .navbar-brand {
-    font: 400 30px/1.3 'Berkshire Swash', Helvetica, sans-serif;
+    font: 400 30px/1.3 'Berkshire Swash', cursive;
     padding: 0 5px;
     margin-top: 10px;
 
